# mini_agent

./: .gitignore  LICENSE  README.md  SYLLABUS.md  pyproject.toml  requirements.txt
chapters/ch01_llm_client/: README.md  extended_reading.md  llm_background.md  llm_client.py
chapters/ch02_agent_loop/: README.md  agent_loop.py  extended_reading.md
chapters/ch03_tools/: README.md  example_tools.py  extended_reading.md  tools.py
chapters/ch04_memory/: README.md  extended_reading.md  memory.py
chapters/ch05_context/: README.md  context_manager.py  extended_reading.md
chapters/ch06_prompt/: README.md  extended_reading.md  prompt_builder.py
chapters/ch07_skills/: README.md  extended_reading.md  skill_system.py
chapters/ch08_plugin/: README.md  plugin_system.py
chapters/ch08_plugin/plugins/calculator/: impl.py  plugin.json
chapters/ch08_plugin/plugins/datetime_plugin/: impl.py  plugin.json
chapters/ch08_plugin/plugins/disabled_example/: impl.py  (+1 more)
chapters/ch09_mcp/: README.md  extended_reading.md  mcp_demo.py
chapters/ch10_learning_loop/: README.md  extended_reading.md  learning_loop.py
chapters/ch11_multi_agent/: README.md  extended_reading.md  multi_agent.py
chapters/ch12_multi_level_memory/: README.md  extended_reading.md  multi_level_memory.py
mini_agent/: __init__.py  config.py  main.py  providers.py
mini_agent/core/: __init__.py  context.py  llm.py  loop.py  prompt.py
mini_agent/memory/: __init__.py  conversation.py  persistent.py
mini_agent/skills/: __init__.py  base.py
mini_agent/tools/: __init__.py  base.py  builtins.py  mcp_client.py
